--- a/index.html
+++ b/index.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index.css" type="text/css">
 </head>
 <body>
     <div class="main">
         <div class="image box">
-            <img src="img/logo.png">
-            <h6>图片</h6>
+            <img src="img/logo.png" width="270px" height="190px">
+            <h6 class="title">图片</h6>
         </div>
         <div class="chn box">
-            <input id="chn">
+            <input id="chn" >
+            <button class="button" id="go" style="background-image:url('img/right.svg');"></button>
         </div>
         <div class="result">
             <input id="result">
+            <button class="button" id="copy" style="background-image:url('img/copy.svg');"></button>
         </div>
         <div class="buttons">
             <h5 id="poem">海上生明月，天涯共此时。</h5>
@@ -24,10 +27,10 @@
                 <img class="icon" src="img/feedback.svg">
             </a>
             <a class="link" id="settings">
-                <img class="icon" src="img/setting.svg">
+                <img class="icon" src="img/settings.svg">
             </a>
         </div>
-        <img class="icon" src="img/translate.svg">
+        <img class="icon" src="img/translate.svg" id="topIcon">
     </div>
 </body>
 </html>
