--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div class="image box">
             <img src="img/logo.png" width="270px" height="190px" id="image">
             <h6 class="title">图片</h6>
+            <button class="button" id="getScreen" style="background-image:url('img/screenshot.svg');"></button>
         </div>
         <div class="chn box">
             <textarea id="chn"></textarea>
