--- a/index.html
+++ b/index.html
@@ -14,12 +14,11 @@
 <body>
     <div class="main">
         <div class="image box">
-            <img src="img/logo.png" width="270px" height="190px" id="image">
-            <h6 class="title">图片</h6>
+            <img src="img/logo.png" width="270px" height="200px" id="image">
             <button class="button" id="getScreen" style="background-image:url('img/screenshot.svg');"></button>
         </div>
-        <div class="chn box">
-            <textarea id="chn"></textarea>
+        <div class="input box">
+            <textarea id="input"></textarea>
             <button class="button" id="go" style="background-image:url('img/right.svg');"></button>
         </div>
         <div class="result">
