--- a/index.html
+++ b/index.html
@@ -27,12 +27,14 @@
         </div>
         <div class="buttons">
             <h5 id="poem">海上生明月，天涯共此时。</h5>
-            <a class="link" id="about">
-                <img class="icon" src="img/feedback.svg">
-            </a>
             <a class="link" id="settings">
                 <img class="icon" src="img/settings.svg">
             </a>
+        </div>
+        <div class="setting">
+            appID:<input id="appID">
+            appSecret:<input id="appSecret" type="password">
+            <button id="setCon">确认</button>
         </div>
         <img class="icon" src="img/translate.svg" id="topIcon">
     </div>
