主功能：截图翻译已完成

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         <div class="setting">
             appID:<input id="appID">
-            appSecret:<input id="appSecret" type="password">
+            appSecret:<input id="appSec" type="password">
             <button id="setCon">确认</button>
         </div>
         <img class="icon" src="img/translate.svg" id="topIcon">
