--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="index.css" type="text/css">
-    <script src="jquery-3.6.0.min.js"></script>
-    <script src="index.js"></script>
-    <script src="preload.js"></script>
-    <script src="crypto-js.min.js"></script>
+    <link rel="stylesheet" href="css/index.css" type="text/css">
+    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/index.js"></script>
+    <script src="js/preload.js"></script>
+    <script src="js/crypto-js.min.js"></script>
 </head>
 <body>
     <div class="main">
