优化用户使用体验

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </a>
         </div>
         <div class="setting">
-            appID:<input id="appID">
+            appID:<input id="appID" type="password">
             appSecret:<input id="appSec" type="password">
             <button id="setCon">确认</button>
         </div>
