增加引导用户配置appid

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             </a>
         </div>
         <div class="setting">
+            <p>初次使用？请参照https://github.com/Hitaoa/Trans的文档配置</p>
             appID:<input id="appID" type="password">
             appSecret:<input id="appSec" type="password">
             <button id="setCon">确认</button>
