重构目录结构 尝试require的过程中发现错误

--- a/index.html
+++ b/index.html
@@ -9,26 +9,25 @@
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/index.js"></script>
     <script src="js/preload.js"></script>
-    <script src="js/crypto-js.min.js"></script>
 </head>
 <body>
     <div class="main">
         <div class="image box">
             <img src="img/logo.png" width="270px" height="200px" id="image">
-            <button class="button" id="getScreen" style="background-image:url('img/screenshot.svg');"></button>
+            <button class="button" id="getScreen" style="background-image:url('img/icon/screenshot.svg');"></button>
         </div>
         <div class="input box">
             <textarea id="input"></textarea>
-            <button class="button" id="go" style="background-image:url('img/right.svg');"></button>
+            <button class="button" id="go" style="background-image:url('img/icon/right.svg');"></button>
         </div>
         <div class="result">
             <textarea id="result"></textarea>
-            <button class="button" id="copy" style="background-image:url('img/copy.svg');"></button>
+            <button class="button" id="copy" style="background-image:url('img/icon/copy.svg');"></button>
         </div>
         <div class="buttons">
             <h5 id="poem">海上生明月，天涯共此时。</h5>
             <a class="link" id="settings">
-                <img class="icon" src="img/settings.svg">
+                <img class="icon" src="img/icon/settings.svg">
             </a>
         </div>
         <div class="setting">
@@ -37,7 +36,7 @@
             appSecret:<input id="appSec" type="password">
             <button id="setCon">确认</button>
         </div>
-        <img class="icon" src="img/translate.svg" id="topIcon">
+        <img class="icon" src="img/icon/translate.svg" id="topIcon">
     </div>
 </body>
 </html>
