--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/index.css" type="text/css">
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/index.js"></script>
-    <script src="js/preload.js"></script>
+    <!-- <script src="js/preload.js"></script> -->
 </head>
 <body>
     <div class="main">
