new:双输入框提示

--- a/src/index.html
+++ b/src/index.html
@@ -18,11 +18,11 @@
         </div>
         <div class="input box">
             <textarea id="input"></textarea>
-            <button class="button" id="go" style="background-image:url('img/icon/right.svg');"></button>
+            <button class="button" id="go" style="background-image:url('img/icon/right.svg');" aria-placeholder="这里将显示OCR结果"></button>
         </div>
         <div class="result">
             <textarea id="result"></textarea>
-            <button class="button" id="copy" style="background-image:url('img/icon/copy.svg');"></button>
+            <button class="button" id="copy" style="background-image:url('img/icon/copy.svg');" aria-placeholder="这里将显示翻译结果"></button>
         </div>
         <div class="buttons">
             <h5 id="poem">海上生明月，天涯共此时。</h5>
@@ -31,7 +31,7 @@
             </a>
         </div>
         <div class="setting">
-            <p>初次使用？请参照https://github.com/Hitaoa/Trans的文档配置</p>
+            <p>请参照https://github.com/Hitaoa/Trans的文档配置</p>
             appID:<input id="appID" type="password">
             appSecret:<input id="appSec" type="password">
             <button id="setCon">确认</button>
