new:新增重试按钮

--- a/src/index.html
+++ b/src/index.html
@@ -140,6 +140,7 @@
         </div>
         <div class="result">
             <textarea id="result"></textarea>
+            <button class="button" id="restart" style="background-image:url('img/icon/restart-line.svg');" aria-placeholder="重新请求"></button>
             <button class="button" id="copy" style="background-image:url('img/icon/copy.svg');" aria-placeholder="这里将显示翻译结果"></button>
             <select id="to">
                 <option value="auto">自动识别</option>
