fix:更加优雅的开文档方式

--- a/src/index.html
+++ b/src/index.html
@@ -260,12 +260,16 @@
         </div>
         <div class="buttons">
             <h5 id="poem">海上生明月，天涯共此时。</h5>
-            <a class="link" id="settings">
+            <a class="link" id="doc" onclick="window.u.openURL('https://github.com/Hitaoa/Trans')">
+                <img class="icon" src="img/icon/file-text-line.svg">
+            </a>
+            <a class="link" id="settings" >
                 <img class="icon" src="img/icon/settings.svg">
             </a>
+            
         </div>
         <div class="setting">
-            <p>请参照https://github.com/Hitaoa/Trans的文档配置</p>
+            <p>请参照文档配置</p>
             appID:<input id="appID" type="password">
             appSecret:<input id="appSec" type="password">
             <button id="setCon">确认</button>
