--- a/src/index.html
+++ b/src/index.html
@@ -270,8 +270,10 @@
         </div>
         <div class="setting">
             <p>请参照文档配置</p>
-            appID:<input id="appID" type="password">
-            appSecret:<input id="appSec" type="password">
+            appID:<input id="appID" type="password"><br/>
+            appSecret:<input id="appSec" type="password"><br/>
+            from:<input id=froms" type="text" value="auto"><br/>
+            to:<input id="tos" type="text" value="auto"><br/> 
             <button id="setCon">确认</button>
         </div>
         <img class="icon" src="img/icon/translate.svg" id="topIcon">
