fix:修复无法正常设置并使用默认语言的bug

--- a/src/index.html
+++ b/src/index.html
@@ -272,7 +272,7 @@
             <p>请参照文档配置</p>
             appID:<input id="appID" type="password"><br/>
             appSecret:<input id="appSec" type="password"><br/>
-            from:<input id=froms" type="text" value="auto"><br/>
+            from:<input id="froms" type="text" value="auto"><br/>
             to:<input id="tos" type="text" value="auto"><br/> 
             <button id="setCon">确认</button>
         </div>
