fix:复用语言代码框，优化设置

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/index.css" type="text/css">
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/index.js"></script>
+    <script src="js/text.js"></script>
     <!-- <script src="js/preload.js"></script> -->
 </head>
 <body>
@@ -20,243 +21,13 @@
         <div class="input box">
             <textarea id="input"></textarea>
             <button class="button" id="go" style="background-image:url('img/icon/right.svg');" aria-placeholder="这里将显示OCR结果"></button>
-            <select id="from">
-                <option value="auto">自动识别</option>
-                <option value="zh-CHS">中文</option>
-                <option value="zh-CHT">中文繁体</option>
-                <option value="en">英文</option>
-                <option value="ja">日文</option>
-                <option value="ko">韩文</option>
-                <option value="fr">法文</option>
-                <option value="es">西班牙文</option>
-                <option value="pt">葡萄牙文</option>
-                <option value="it">意大利文</option>
-                <option value="ru">俄文</option>
-                <option value="vi">越南文</option>
-                <option value="de">德文</option>
-                <option value="ar">阿拉伯文</option>
-                <option value="id">印尼文</option>
-                <option value="af">南非荷兰语</option>
-                <option value="bs">波斯尼亚语</option>
-                <option value="bg">保加利亚语</option>
-                <option value="yue">粤语</option>
-                <option value="ca">加泰隆语</option>
-                <option value="hr">克罗地亚语</option>
-                <option value="cs">捷克语</option>
-                <option value="da">丹麦语</option>
-                <option value="nl">荷兰语</option>
-                <option value="et">爱沙尼亚语</option>
-                <option value="fj">斐济语</option>
-                <option value="fi">芬兰语</option>
-                <option value="el">希腊语</option>
-                <option value="ht">海地克里奥尔语</option>
-                <option value="he">希伯来语</option>
-                <option value="hi">印地语</option>
-                <option value="mww">白苗语</option>
-                <option value="hu">匈牙利语</option>
-                <option value="sw">斯瓦希里语</option>
-                <option value="tlh">克林贡语</option>
-                <option value="lv">拉脱维亚语</option>
-                <option value="lt">立陶宛语</option>
-                <option value="ms">马来语</option>
-                <option value="mt">马耳他语</option>
-                <option value="no">挪威语</option>
-                <option value="fa">波斯语</option>
-                <option value="pl">波兰语</option>
-                <option value="otq">克雷塔罗奥托米语</option>
-                <option value="ro">罗马尼亚语</option>
-                <option value="sr-Cyrl">塞尔维亚语(西里尔文)</option>
-                <option value="sr-Latn">塞尔维亚语(拉丁文)</option>
-                <option value="sk">斯洛伐克语</option>
-                <option value="sl">斯洛文尼亚语</option>
-                <option value="sv">瑞典语</option>
-                <option value="ty">塔希提语</option>
-                <option value="th">泰语</option>
-                <option value="to">汤加语</option>
-                <option value="tr">土耳其语</option>
-                <option value="uk">乌克兰语</option>
-                <option value="ur">乌尔都语</option>
-                <option value="cy">威尔士语</option>
-                <option value="yua">尤卡坦玛雅语</option>
-                <option value="sq">阿尔巴尼亚语</option>
-                <option value="am">阿姆哈拉语</option>
-                <option value="hy">亚美尼亚语</option>
-                <option value="az">阿塞拜疆语</option>
-                <option value="bn">孟加拉语</option>
-                <option value="eu">巴斯克语</option>
-                <option value="be">白俄罗斯语</option>
-                <option value="ceb">宿务语</option>
-                <option value="co">科西嘉语</option>
-                <option value="eo">世界语</option>
-                <option value="tl">菲律宾语</option>
-                <option value="fy">弗里西语</option>
-                <option value="gl">加利西亚语</option>
-                <option value="ka">格鲁吉亚语</option>
-                <option value="gu">古吉拉特语</option>
-                <option value="ha">豪萨语</option>
-                <option value="haw">夏威夷语</option>
-                <option value="is">冰岛语</option>
-                <option value="ig">伊博语</option>
-                <option value="ga">爱尔兰语</option>
-                <option value="jw">爪哇语</option>
-                <option value="kn">卡纳达语</option>
-                <option value="kk">哈萨克语</option>
-                <option value="km">高棉语</option>
-                <option value="ku">库尔德语</option>
-                <option value="ky">柯尔克孜语</option>
-                <option value="lo">老挝语</option>
-                <option value="la">拉丁语</option>
-                <option value="lb">卢森堡语</option>
-                <option value="mk">马其顿语</option>
-                <option value="mg">马尔加什语</option>
-                <option value="ml">马拉雅拉姆语</option>
-                <option value="mi">毛利语</option>
-                <option value="mr">马拉地语</option>
-                <option value="mn">蒙古语</option>
-                <option value="my">缅甸语</option>
-                <option value="ne">尼泊尔语</option>
-                <option value="ny">齐切瓦语</option>
-                <option value="ps">普什图语</option>
-                <option value="pa">旁遮普语</option>
-                <option value="sm">萨摩亚语</option>
-                <option value="gd">苏格兰盖尔语</option>
-                <option value="st">塞索托语</option>
-                <option value="sn">修纳语</option>
-                <option value="sd">信德语</option>
-                <option value="si">僧伽罗语</option>
-                <option value="so">索马里语</option>
-                <option value="su">巽他语</option>
-                <option value="tg">塔吉克语</option>
-                <option value="ta">泰米尔语</option>
-                <option value="te">泰卢固语</option>
-                <option value="uz">乌兹别克语</option>
-                <option value="xh">南非科萨语</option>
-                <option value="yi">意第绪语</option>
-                <option value="yo">约鲁巴语</option>
-                <option value="zu">南非祖鲁语</option>
- 
-                            
-            </select>
+            <select id="from"></select>
         </div>
         <div class="result">
             <textarea id="result"></textarea>
             <button class="button" id="restart" style="background-image:url('img/icon/restart-line.svg');" aria-placeholder="重新请求"></button>
             <button class="button" id="copy" style="background-image:url('img/icon/copy.svg');" aria-placeholder="这里将显示翻译结果"></button>
-            <select id="to">
-                <option value="auto">自动识别</option>
-                <option value="zh-CHS">中文</option>
-                <option value="zh-CHT">中文繁体</option>
-                <option value="en">英文</option>
-                <option value="ja">日文</option>
-                <option value="ko">韩文</option>
-                <option value="fr">法文</option>
-                <option value="es">西班牙文</option>
-                <option value="pt">葡萄牙文</option>
-                <option value="it">意大利文</option>
-                <option value="ru">俄文</option>
-                <option value="vi">越南文</option>
-                <option value="de">德文</option>
-                <option value="ar">阿拉伯文</option>
-                <option value="id">印尼文</option>
-                <option value="af">南非荷兰语</option>
-                <option value="bs">波斯尼亚语</option>
-                <option value="bg">保加利亚语</option>
-                <option value="yue">粤语</option>
-                <option value="ca">加泰隆语</option>
-                <option value="hr">克罗地亚语</option>
-                <option value="cs">捷克语</option>
-                <option value="da">丹麦语</option>
-                <option value="nl">荷兰语</option>
-                <option value="et">爱沙尼亚语</option>
-                <option value="fj">斐济语</option>
-                <option value="fi">芬兰语</option>
-                <option value="el">希腊语</option>
-                <option value="ht">海地克里奥尔语</option>
-                <option value="he">希伯来语</option>
-                <option value="hi">印地语</option>
-                <option value="mww">白苗语</option>
-                <option value="hu">匈牙利语</option>
-                <option value="sw">斯瓦希里语</option>
-                <option value="tlh">克林贡语</option>
-                <option value="lv">拉脱维亚语</option>
-                <option value="lt">立陶宛语</option>
-                <option value="ms">马来语</option>
-                <option value="mt">马耳他语</option>
-                <option value="no">挪威语</option>
-                <option value="fa">波斯语</option>
-                <option value="pl">波兰语</option>
-                <option value="otq">克雷塔罗奥托米语</option>
-                <option value="ro">罗马尼亚语</option>
-                <option value="sr-Cyrl">塞尔维亚语(西里尔文)</option>
-                <option value="sr-Latn">塞尔维亚语(拉丁文)</option>
-                <option value="sk">斯洛伐克语</option>
-                <option value="sl">斯洛文尼亚语</option>
-                <option value="sv">瑞典语</option>
-                <option value="ty">塔希提语</option>
-                <option value="th">泰语</option>
-                <option value="to">汤加语</option>
-                <option value="tr">土耳其语</option>
-                <option value="uk">乌克兰语</option>
-                <option value="ur">乌尔都语</option>
-                <option value="cy">威尔士语</option>
-                <option value="yua">尤卡坦玛雅语</option>
-                <option value="sq">阿尔巴尼亚语</option>
-                <option value="am">阿姆哈拉语</option>
-                <option value="hy">亚美尼亚语</option>
-                <option value="az">阿塞拜疆语</option>
-                <option value="bn">孟加拉语</option>
-                <option value="eu">巴斯克语</option>
-                <option value="be">白俄罗斯语</option>
-                <option value="ceb">宿务语</option>
-                <option value="co">科西嘉语</option>
-                <option value="eo">世界语</option>
-                <option value="tl">菲律宾语</option>
-                <option value="fy">弗里西语</option>
-                <option value="gl">加利西亚语</option>
-                <option value="ka">格鲁吉亚语</option>
-                <option value="gu">古吉拉特语</option>
-                <option value="ha">豪萨语</option>
-                <option value="haw">夏威夷语</option>
-                <option value="is">冰岛语</option>
-                <option value="ig">伊博语</option>
-                <option value="ga">爱尔兰语</option>
-                <option value="jw">爪哇语</option>
-                <option value="kn">卡纳达语</option>
-                <option value="kk">哈萨克语</option>
-                <option value="km">高棉语</option>
-                <option value="ku">库尔德语</option>
-                <option value="ky">柯尔克孜语</option>
-                <option value="lo">老挝语</option>
-                <option value="la">拉丁语</option>
-                <option value="lb">卢森堡语</option>
-                <option value="mk">马其顿语</option>
-                <option value="mg">马尔加什语</option>
-                <option value="ml">马拉雅拉姆语</option>
-                <option value="mi">毛利语</option>
-                <option value="mr">马拉地语</option>
-                <option value="mn">蒙古语</option>
-                <option value="my">缅甸语</option>
-                <option value="ne">尼泊尔语</option>
-                <option value="ny">齐切瓦语</option>
-                <option value="ps">普什图语</option>
-                <option value="pa">旁遮普语</option>
-                <option value="sm">萨摩亚语</option>
-                <option value="gd">苏格兰盖尔语</option>
-                <option value="st">塞索托语</option>
-                <option value="sn">修纳语</option>
-                <option value="sd">信德语</option>
-                <option value="si">僧伽罗语</option>
-                <option value="so">索马里语</option>
-                <option value="su">巽他语</option>
-                <option value="tg">塔吉克语</option>
-                <option value="ta">泰米尔语</option>
-                <option value="te">泰卢固语</option>
-                <option value="uz">乌兹别克语</option>
-                <option value="xh">南非科萨语</option>
-                <option value="yi">意第绪语</option>
-                <option value="yo">约鲁巴语</option>
-                <option value="zu">南非祖鲁语</option>                          
-            </select>
+            <select id="to"></select>
         </div>
         <div class="buttons">
             <h5 id="poem">海上生明月，天涯共此时。</h5>
@@ -272,8 +43,8 @@
             <p>请参照文档配置</p>
             appID:<input id="appID" type="password"><br/>
             appSecret:<input id="appSec" type="password"><br/>
-            from:<input id="froms" type="text" value="auto"><br/>
-            to:<input id="tos" type="text" value="auto"><br/> 
+            from:<select id="froms"></select><br/>
+            to:<select id="tos"></select><br/> 
             <button id="setCon">确认</button>
         </div>
         <img class="icon" src="img/icon/translate.svg" id="topIcon">
