new:新增TTS转语音服务

--- a/src/index.html
+++ b/src/index.html
@@ -22,12 +22,18 @@
             <textarea id="input"></textarea>
             <button class="button" id="go" style="background-image:url('img/icon/right.svg');" aria-placeholder="这里将显示OCR结果"></button>
             <select id="from"></select>
+            <a class="link audio" id="fromA" url="">
+                <img class="icon" src="img/icon/volume.svg">
+            </a>
         </div>
         <div class="result">
             <textarea id="result"></textarea>
             <button class="button" id="restart" style="background-image:url('img/icon/restart-line.svg');" aria-placeholder="重新请求"></button>
             <button class="button" id="copy" style="background-image:url('img/icon/copy.svg');" aria-placeholder="这里将显示翻译结果"></button>
             <select id="to"></select>
+            <a class="link audio" id="toA" url="">
+                <img class="icon" src="img/icon/volume.svg">
+            </a>
         </div>
         <div class="buttons">
             <h5 id="poem">海上生明月，天涯共此时。</h5>
