fix:使用更小的str2gbk包

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/index.js"></script>
     <script src="js/text.js"></script>
+    <script src="js/str2gbk.js"></script>
     <!-- <script src="js/preload.js"></script> -->
 </head>
 <body>
